--- a/CrosswordSolver/CrosswordSolver.csproj
+++ b/CrosswordSolver/CrosswordSolver.csproj
@@ -102,16 +102,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Audio.cs" />
-    <Compile Include="Audioclip.cs" />
-    <Compile Include="Button.cs" />
-    <Compile Include="Cache.cs" />
-    <Compile Include="Callback.cs" />
-    <Compile Include="Camera.cs" />
-    <Compile Include="Checkbox.cs" />
-    <Compile Include="Circle.cs" />
-    <Compile Include="Cube.cs" />
-    <Compile Include="Debug.cs" />
+    <Compile Include="src\audio\Audio.cs" />
+    <Compile Include="src\audio\Audioclip.cs" />
+    <Compile Include="src\ui\Button.cs" />
+    <Compile Include="src\core\Cache.cs" />
+    <Compile Include="src\core\Callback.cs" />
+    <Compile Include="src\graphics\Camera.cs" />
+    <Compile Include="src\ui\Checkbox.cs" />
+    <Compile Include="src\geometry\Circle.cs" />
+    <Compile Include="src\geometry\Cube.cs" />
+    <Compile Include="src\core\Debug.cs" />
     <Compile Include="EditorWindow.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -127,41 +127,41 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Game.cs" />
-    <Compile Include="Gamepad.cs" />
-    <Compile Include="GamepadManager.cs" />
-    <Compile Include="Graphics.cs" />
-    <Compile Include="Group.cs" />
-    <Compile Include="GUIObject.cs" />
-    <Compile Include="InputManager.cs" />
-    <Compile Include="IsoSprite.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="Keyboard.cs" />
-    <Compile Include="ListView.cs" />
-    <Compile Include="Loader.cs" />
+    <Compile Include="src\core\Game.cs" />
+    <Compile Include="src\input\Gamepad.cs" />
+    <Compile Include="src\input\GamepadManager.cs" />
+    <Compile Include="src\graphics\Graphics.cs" />
+    <Compile Include="src\core\Group.cs" />
+    <Compile Include="src\ui\GUIObject.cs" />
+    <Compile Include="src\input\InputManager.cs" />
+    <Compile Include="src\graphics\IsoSprite.cs" />
+    <Compile Include="src\ui\Item.cs" />
+    <Compile Include="src\input\Keyboard.cs" />
+    <Compile Include="src\ui\ListView.cs" />
+    <Compile Include="src\core\Loader.cs" />
     <Compile Include="LuaInit.cs" />
-    <Compile Include="ObjectFactory.cs" />
-    <Compile Include="Pointer.cs" />
-    <Compile Include="Polygon.cs" />
+    <Compile Include="src\core\ObjectFactory.cs" />
+    <Compile Include="src\input\Pointer.cs" />
+    <Compile Include="src\geometry\Polygon.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Projector.cs" />
+    <Compile Include="src\graphics\Projector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rect.cs" />
-    <Compile Include="Screen.cs" />
-    <Compile Include="Signal.cs" />
-    <Compile Include="Slider.cs" />
-    <Compile Include="Spring.cs" />
-    <Compile Include="Sprite.cs" />
-    <Compile Include="State.cs" />
-    <Compile Include="StateManager.cs" />
+    <Compile Include="src\geometry\Rect.cs" />
+    <Compile Include="src\graphics\Screen.cs" />
+    <Compile Include="src\core\Signal.cs" />
+    <Compile Include="src\ui\Slider.cs" />
+    <Compile Include="src\animation\Spring.cs" />
+    <Compile Include="src\graphics\Sprite.cs" />
+    <Compile Include="src\core\State.cs" />
+    <Compile Include="src\core\StateManager.cs" />
     <Compile Include="TileDialog.cs" />
-    <Compile Include="TimeManager.cs" />
-    <Compile Include="Timer.cs" />
-    <Compile Include="Tween.cs" />
-    <Compile Include="TweenData.cs" />
-    <Compile Include="TweenManager.cs" />
-    <Compile Include="UIManager.cs" />
-    <Compile Include="VectorExtension.cs" />
+    <Compile Include="src\core\TimeManager.cs" />
+    <Compile Include="src\core\Timer.cs" />
+    <Compile Include="src\animation\Tween.cs" />
+    <Compile Include="src\animation\TweenData.cs" />
+    <Compile Include="src\animation\TweenManager.cs" />
+    <Compile Include="src\ui\UIManager.cs" />
+    <Compile Include="src\core\VectorExtension.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -202,6 +202,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
+    <Folder Include="src\physics\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MonoGame.Framework.WindowsDX.3.7.1.189\build\MonoGame.Framework.WindowsDX.targets" Condition="Exists('..\packages\MonoGame.Framework.WindowsDX.3.7.1.189\build\MonoGame.Framework.WindowsDX.targets')" />
